@@ -105,6 +105,7 @@ public class ExperimentService {
 //        }
 //        return new ResponseEntity<>(screenDataRepository.findAll(), HttpStatus.OK);
 //    }
+    // TODO: change the use of audio to media in URLs and class names eg in href='audio/
     @RequestMapping(value = "/audioBlob", method = RequestMethod.POST, consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @ResponseBody
     public ResponseEntity<String> registerAudioData(@RequestParam("dataBlob") MultipartFile dataBlob, @RequestParam("userId") String userId, @RequestParam("stimulusId") String stimulusId, @RequestParam("audioType") AudioType audioType, @RequestParam("screenName") String screenName, @RequestParam("downloadPermittedWindowMs") long downloadPermittedWindowMs) throws IOException {
